# Lindley

./: .gitignore  README.md  UI_design  db_tools.py  docker-compose.yml  dump.rdb  init_db.py  launcher.py  migrate_db.py  pyproject.toml  requirements.lock.txt  requirements.txt  settings.json  sora.brief  structure.txt
lindley/AI/: __init__.py
lindley/frontend/: package-lock.json  package.json  tsconfig.electron.json
lindley/frontend/dist-electron/: electron-main.js
lindley/frontend/dist_electron/: builder-debug.yml  builder-effective-config.yaml
lindley/frontend/src/: App.tsx
lindley/frontend/src/main/: electron-main.ts
lindley/watcher/: watcher.py
lindley/worker/: worker.py
lindley_ingestor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
watcher/: Dockerfile  watcher.py
worker/: Dockerfile  worker.py
